Fix sizing of card, remove city from address
Address was too long and causing 'flashing' of new cards.

--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -33,14 +33,14 @@
   }
 
   &__card {
-    min-height: 480px;
+    height: 540px;
     padding: 0 1rem 1rem 1rem;
     background-color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
     flex-wrap: nowrap;
-    min-width: 400px;
+    width: 500px;
 
     border-radius: 5px;
     padding: 0 3rem 1.5rem;
